# plecs-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  PROGRESS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: cscript-notes.md  development-plan.md  plecs-layout-conventions.md  thermal-magnetic-notes.md
eval/: README.md  evaluation.xml
golden_models/: README.md  agent_boost.plecs  agent_buck.plecs  agent_buck_closedloop.plecs  agent_buck_cscript.plecs  agent_buck_subsystem.plecs  agent_buck_thermal.plecs  agent_buckboost.plecs  agent_magnetic_inductor.plecs  agent_thermal_min.plecs  agent_transformer.plecs
golden_models/agent_buck_thermal_plecs/: Q1.xml
plecs_mcp/: __init__.py  config.py  errors.py  logging_setup.py  resources.py  server.py
plecs_mcp/authoring/: __init__.py  kb.py  layout.py  lossdata.py  serializer.py  spec.py  templates.py  thermal.py  tools.py
plecs_mcp/authoring/reference/: demo_catalog.json  harvested_components.json  meta.json
plecs_mcp/docs/: __init__.py  extract.py  search.py
plecs_mcp/results/: __init__.py  analysis.py  plot.py  store.py
plecs_mcp/rpc/: __init__.py  client.py
tests/: test_analysis.py  test_authoring.py  test_autolayout.py  test_batch.py  test_checkspec.py  test_config.py  test_control.py  test_cscript.py  test_docs.py  test_library.py  test_logging.py  test_magnetic_authoring.py  test_rpc_offline.py  test_simulate_metrics.py  test_subsystem.py  test_thermal_authoring.py  test_thermal_build.py  test_thermal_magnetic.py
