[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plecs-mcp"
version = "0.5.0"
description = "MCP server for full-scope PLECS power-electronics simulation (build, run, tune, analyze)"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "yingriyanlong" }]
dependencies = [
    "mcp>=1.0",       # MCP SDK / FastMCP stdio server
    "pydantic>=2.0",  # typed circuit specs
    "numpy",          # waveform metrics, bode
    "matplotlib",     # waveform PNGs
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
plecs-mcp = "plecs_mcp.server:main"

[tool.setuptools.packages.find]
include = ["plecs_mcp*"]

[tool.setuptools.package-data]
plecs_mcp = ["authoring/reference/*.json"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
